Fixed lightbox error in index and listing page. Fixed word wrapping in listing description

--- a/web_app/static/css/ddsmoothmenu.css
+++ b/web_app/static/css/ddsmoothmenu.css
@@ -1,5 +1,5 @@
 .navigation {
-	width:442px;
+	width:560px;
 	float:left;
 	height:53px;
 	font-family:Tahoma, Geneva, sans-serif;
